[project]
name = "fastseqio"
version = "0.0.4"
description = "A package for reading and writing fasta/fastq files"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "dwpeng", email = "1732889554@qq.com" }]
dependencies = []
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/dwpeng/fastseqio"
repository = "https://github.com/dwpeng/fastseqio"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
